--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
 />
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Great+Vibes&family=Dancing+Script&family=Allura&family=Satisfy&display=swap" rel="stylesheet">
 
 </head>
 <body>
